walkers/CLangParser.py
# Generated from CLang.g4 by ANTLR 4.13.1
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO


class CLangParser ( Parser ):

    grammarFileName = "CLang.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "';'", "'print'", "'('", "')'", "'sqrt'", 
                     "','", "'AND'", "'OR'", "'NOT'", "'=='", "'!='", "'>='", 
                     "'<='", "'>'", "'<'", "'()'", "'{'", "'}'", "'return'", 
                     "'if'", "'else-if'", "'else'", "'for'", "'while'", 
                     "'main'", "<INVALID>", "'.'", "':'", "'int'", "'float'", 
                     "'string'", "'void'", "'True'", "'False'", "'+'", "'-'", 
                     "'*'", "'='", "'^'", "'/'" ]

    symbolicNames = [ "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "WS", "POINT", "COLON", 
                      "INT", "FLOAT", "STRING", "VOID", "TRUE", "FALSE", 
                      "ADD", "SUBSTRACT", "MULTIPLY", "EQUAL", "POW", "DIV", 
                      "ID", "NUMBER", "DECIMAL", "STR" ]

    RULE_program = 0
    RULE_statement = 1
    RULE_print = 2
    RULE_declaration = 3
    RULE_definition = 4
    RULE_var_value = 5
    RULE_arit_operation = 6
    RULE_method_call = 7
    RULE_bool_operation = 8
    RULE_bool_compare = 9
    RULE_var_expr = 10
    RULE_body_statements = 11
    RULE_method = 12
    RULE_method_def = 13
    RULE_method_body = 14
    RULE_method_type = 15
    RULE_method_return = 16
    RULE_if = 17
    RULE_if_def = 18
    RULE_else_if_def = 19
    RULE_else_def = 20
    RULE_for = 21
    RULE_for_def = 22
    RULE_for_body = 23
    RULE_while = 24
    RULE_while_def = 25
    RULE_while_body = 26
    RULE_type = 27
    RULE_main = 28
    RULE_tk_id = 29
    RULE_tk_int = 30
    RULE_tk_float = 31
    RULE_tk_string = 32
    RULE_tk_add = 33
    RULE_tk_substract = 34
    RULE_tk_multiply = 35

    ruleNames =  [ "program", "statement", "print", "declaration", "definition", 
                   "var_value", "arit_operation", "method_call", "bool_operation", 
                   "bool_compare", "var_expr", "body_statements", "method", 
                   "method_def", "method_body", "method_type", "method_return", 
                   "if", "if_def", "else_if_def", "else_def", "for", "for_def", 
                   "for_body", "while", "while_def", "while_body", "type", 
                   "main", "tk_id", "tk_int", "tk_float", "tk_string", "tk_add", 
                   "tk_substract", "tk_multiply" ]

    EOF = Token.EOF
    T__0=1
    T__1=2
    T__2=3
    T__3=4
    T__4=5
    T__5=6
    T__6=7
    T__7=8
    T__8=9
    T__9=10
    T__10=11
    T__11=12
    T__12=13
    T__13=14
    T__14=15
    T__15=16
    T__16=17
    T__17=18
    T__18=19
    T__19=20
    T__20=21
    T__21=22
    T__22=23
    T__23=24
    T__24=25
    WS=26
    POINT=27
    COLON=28
    INT=29
    FLOAT=30
    STRING=31
    VOID=32
    TRUE=33
    FALSE=34
    ADD=35
    SUBSTRACT=36
    MULTIPLY=37
    EQUAL=38
    POW=39
    DIV=40
    ID=41
    NUMBER=42
    DECIMAL=43
    STR=44

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.13.1")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class ProgramContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def main(self):
            return self.getTypedRuleContext(CLangParser.MainContext,0)


        def method(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(CLangParser.MethodContext)
            else:
                return self.getTypedRuleContext(CLangParser.MethodContext,i)


        def getRuleIndex(self):
            return CLangParser.RULE_program

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterProgram" ):
                listener.enterProgram(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitProgram" ):
                listener.exitProgram(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitProgram" ):
                return visitor.visitProgram(self)
            else:
                return visitor.visitChildren(self)




    def program(self):

        localctx = CLangParser.ProgramContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_program)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 75
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while (((_la) & ~0x3f) == 0 and ((1 << _la) & 8053063680) != 0):
                self.state = 72
                self.method()
                self.state = 77
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 78
            self.main()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class StatementContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def declaration(self):
            return self.getTypedRuleContext(CLangParser.DeclarationContext,0)


        def definition(self):
            return self.getTypedRuleContext(CLangParser.DefinitionContext,0)


        def print_(self):
            return self.getTypedRuleContext(CLangParser.PrintContext,0)


        def method_call(self):
            return self.getTypedRuleContext(CLangParser.Method_callContext,0)


        def getRuleIndex(self):
            return CLangParser.RULE_statement

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterStatement" ):
                listener.enterStatement(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitStatement" ):
                listener.exitStatement(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitStatement" ):
                return visitor.visitStatement(self)
            else:
                return visitor.visitChildren(self)




    def statement(self):

        localctx = CLangParser.StatementContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_statement)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 84
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,1,self._ctx)
            if la_ == 1:
                self.state = 80
                self.declaration()
                pass

            elif la_ == 2:
                self.state = 81
                self.definition()
                pass

            elif la_ == 3:
                self.state = 82
                self.print_()
                pass

            elif la_ == 4:
                self.state = 83
                self.method_call()
                pass


            self.state = 86
            self.match(CLangParser.T__0)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class PrintContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def arit_operation(self):
            return self.getTypedRuleContext(CLangParser.Arit_operationContext,0)


        def getRuleIndex(self):
            return CLangParser.RULE_print

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterPrint" ):
                listener.enterPrint(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitPrint" ):
                listener.exitPrint(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitPrint" ):
                return visitor.visitPrint(self)
            else:
                return visitor.visitChildren(self)




    def print_(self):

        localctx = CLangParser.PrintContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_print)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 88
            self.match(CLangParser.T__1)
            self.state = 89
            self.match(CLangParser.T__2)
            self.state = 90
            self.arit_operation(0)
            self.state = 91
            self.match(CLangParser.T__3)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class DeclarationContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def type_(self):
            return self.getTypedRuleContext(CLangParser.TypeContext,0)


        def tk_id(self):
            return self.getTypedRuleContext(CLangParser.Tk_idContext,0)


        def getRuleIndex(self):
            return CLangParser.RULE_declaration

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterDeclaration" ):
                listener.enterDeclaration(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitDeclaration" ):
                listener.exitDeclaration(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitDeclaration" ):
                return visitor.visitDeclaration(self)
            else:
                return visitor.visitChildren(self)




    def declaration(self):

        localctx = CLangParser.DeclarationContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_declaration)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 93
            self.type_()
            self.state = 94
            self.tk_id()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class DefinitionContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def declaration(self):
            return self.getTypedRuleContext(CLangParser.DeclarationContext,0)


        def EQUAL(self):
            return self.getToken(CLangParser.EQUAL, 0)

        def var_value(self):
            return self.getTypedRuleContext(CLangParser.Var_valueContext,0)


        def tk_id(self):
            return self.getTypedRuleContext(CLangParser.Tk_idContext,0)


        def getRuleIndex(self):
            return CLangParser.RULE_definition

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterDefinition" ):
                listener.enterDefinition(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitDefinition" ):
                listener.exitDefinition(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitDefinition" ):
                return visitor.visitDefinition(self)
            else:
                return visitor.visitChildren(self)




    def definition(self):

        localctx = CLangParser.DefinitionContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_definition)
        try:
            self.state = 104
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [29, 30, 31]:
                self.enterOuterAlt(localctx, 1)
                self.state = 96
                self.declaration()
                self.state = 97
                self.match(CLangParser.EQUAL)
                self.state = 98
                self.var_value()
                pass
            elif token in [41]:
                self.enterOuterAlt(localctx, 2)
                self.state = 100
                self.tk_id()
                self.state = 101
                self.match(CLangParser.EQUAL)
                self.state = 102
                self.var_value()
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Var_valueContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def tk_int(self):
            return self.getTypedRuleContext(CLangParser.Tk_intContext,0)


        def tk_string(self):
            return self.getTypedRuleContext(CLangParser.Tk_stringContext,0)


        def tk_float(self):
            return self.getTypedRuleContext(CLangParser.Tk_floatContext,0)


        def method_call(self):
            return self.getTypedRuleContext(CLangParser.Method_callContext,0)


        def arit_operation(self):
            return self.getTypedRuleContext(CLangParser.Arit_operationContext,0)


        def getRuleIndex(self):
            return CLangParser.RULE_var_value

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterVar_value" ):
                listener.enterVar_value(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitVar_value" ):
                listener.exitVar_value(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitVar_value" ):
                return visitor.visitVar_value(self)
            else:
                return visitor.visitChildren(self)




    def var_value(self):

        localctx = CLangParser.Var_valueContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_var_value)
        try:
            self.state = 111
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,3,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 106
                self.tk_int()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 107
                self.tk_string()
                pass

            elif la_ == 3:
                self.enterOuterAlt(localctx, 3)
                self.state = 108
                self.tk_float()
                pass

            elif la_ == 4:
                self.enterOuterAlt(localctx, 4)
                self.state = 109
                self.method_call()
                pass

            elif la_ == 5:
                self.enterOuterAlt(localctx, 5)
                self.state = 110
                self.arit_operation(0)
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Arit_operationContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def var_expr(self):
            return self.getTypedRuleContext(CLangParser.Var_exprContext,0)


        def arit_operation(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(CLangParser.Arit_operationContext)
            else:
                return self.getTypedRuleContext(CLangParser.Arit_operationContext,i)


        def ADD(self):
            return self.getToken(CLangParser.ADD, 0)

        def SUBSTRACT(self):
            return self.getToken(CLangParser.SUBSTRACT, 0)

        def POW(self):
            return self.getToken(CLangParser.POW, 0)

        def DIV(self):
            return self.getToken(CLangParser.DIV, 0)

        def MULTIPLY(self):
            return self.getToken(CLangParser.MULTIPLY, 0)

        def getRuleIndex(self):
            return CLangParser.RULE_arit_operation

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterArit_operation" ):
                listener.enterArit_operation(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitArit_operation" ):
                listener.exitArit_operation(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitArit_operation" ):
                return visitor.visitArit_operation(self)
            else:
                return visitor.visitChildren(self)



    def arit_operation(self, _p:int=0):
        _parentctx = self._ctx
        _parentState = self.state
        localctx = CLangParser.Arit_operationContext(self, self._ctx, _parentState)
        _prevctx = localctx
        _startState = 12
        self.enterRecursionRule(localctx, 12, self.RULE_arit_operation, _p)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 120
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [41, 42, 43, 44]:
                self.state = 114
                self.var_expr()
                pass
            elif token in [5]:
                self.state = 115
                self.match(CLangParser.T__4)
                self.state = 116
                self.match(CLangParser.T__2)
                self.state = 117
                self.arit_operation(0)
                self.state = 118
                self.match(CLangParser.T__3)
                pass
            else:
                raise NoViableAltException(self)

            self._ctx.stop = self._input.LT(-1)
            self.state = 139
            self._errHandler.sync(self)
            _alt = self._interp.adaptivePredict(self._input,6,self._ctx)
            while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                if _alt==1:
                    if self._parseListeners is not None:
                        self.triggerExitRuleEvent()
                    _prevctx = localctx
                    self.state = 137
                    self._errHandler.sync(self)
                    la_ = self._interp.adaptivePredict(self._input,5,self._ctx)
                    if la_ == 1:
                        localctx = CLangParser.Arit_operationContext(self, _parentctx, _parentState)
                        self.pushNewRecursionContext(localctx, _startState, self.RULE_arit_operation)
                        self.state = 122
                        if not self.precpred(self._ctx, 7):
                            from antlr4.error.Errors import FailedPredicateException
                            raise FailedPredicateException(self, "self.precpred(self._ctx, 7)")
                        self.state = 123
                        self.match(CLangParser.ADD)
                        self.state = 124
                        self.arit_operation(8)
                        pass

                    elif la_ == 2:
                        localctx = CLangParser.Arit_operationContext(self, _parentctx, _parentState)
                        self.pushNewRecursionContext(localctx, _startState, self.RULE_arit_operation)
                        self.state = 125
                        if not self.precpred(self._ctx, 6):
                            from antlr4.error.Errors import FailedPredicateException
                            raise FailedPredicateException(self, "self.precpred(self._ctx, 6)")
                        self.state = 126
                        self.match(CLangParser.SUBSTRACT)
                        self.state = 127
                        self.arit_operation(7)
                        pass

                    elif la_ == 3:
                        localctx = CLangParser.Arit_operationContext(self, _parentctx, _parentState)
                        self.pushNewRecursionContext(localctx, _startState, self.RULE_arit_operation)
                        self.state = 128
                        if not self.precpred(self._ctx, 5):
                            from antlr4.error.Errors import FailedPredicateException
                            raise FailedPredicateException(self, "self.precpred(self._ctx, 5)")
                        self.state = 129
                        self.match(CLangParser.POW)
                        self.state = 130
                        self.arit_operation(6)
                        pass

                    elif la_ == 4:
                        localctx = CLangParser.Arit_operationContext(self, _parentctx, _parentState)
                        self.pushNewRecursionContext(localctx, _startState, self.RULE_arit_operation)
                        self.state = 131
                        if not self.precpred(self._ctx, 4):
                            from antlr4.error.Errors import FailedPredicateException
                            raise FailedPredicateException(self, "self.precpred(self._ctx, 4)")
                        self.state = 132
                        self.match(CLangParser.DIV)
                        self.state = 133
                        self.arit_operation(5)
                        pass

                    elif la_ == 5:
                        localctx = CLangParser.Arit_operationContext(self, _parentctx, _parentState)
                        self.pushNewRecursionContext(localctx, _startState, self.RULE_arit_operation)
                        self.state = 134
                        if not self.precpred(self._ctx, 3):
                            from antlr4.error.Errors import FailedPredicateException
                            raise FailedPredicateException(self, "self.precpred(self._ctx, 3)")
                        self.state = 135
                        self.match(CLangParser.MULTIPLY)
                        self.state = 136
                        self.arit_operation(4)
                        pass

             
                self.state = 141
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,6,self._ctx)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.unrollRecursionContexts(_parentctx)
        return localctx


    class Method_callContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def tk_id(self):
            return self.getTypedRuleContext(CLangParser.Tk_idContext,0)


        def var_value(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(CLangParser.Var_valueContext)
            else:
                return self.getTypedRuleContext(CLangParser.Var_valueContext,i)


        def getRuleIndex(self):
            return CLangParser.RULE_method_call

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterMethod_call" ):
                listener.enterMethod_call(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitMethod_call" ):
                listener.exitMethod_call(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitMethod_call" ):
                return visitor.visitMethod_call(self)
            else:
                return visitor.visitChildren(self)




    def method_call(self):

        localctx = CLangParser.Method_callContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_method_call)
        self._la = 0 # Token type
        try:
            self.state = 158
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,8,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 142
                self.tk_id()
                self.state = 143
                self.match(CLangParser.T__2)
                self.state = 144
                self.var_value()
                self.state = 149
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                while _la==6:
                    self.state = 145
                    self.match(CLangParser.T__5)
                    self.state = 146
                    self.var_value()
                    self.state = 151
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)

                self.state = 152
                self.match(CLangParser.T__3)
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 154
                self.tk_id()
                self.state = 155
                self.match(CLangParser.T__2)
                self.state = 156
                self.match(CLangParser.T__3)
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Bool_operationContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def FALSE(self):
            return self.getToken(CLangParser.FALSE, 0)

        def TRUE(self):
            return self.getToken(CLangParser.TRUE, 0)

        def bool_compare(self):
            return self.getTypedRuleContext(CLangParser.Bool_compareContext,0)


        def bool_operation(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(CLangParser.Bool_operationContext)
            else:
                return self.getTypedRuleContext(CLangParser.Bool_operationContext,i)


        def getRuleIndex(self):
            return CLangParser.RULE_bool_operation

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterBool_operation" ):
                listener.enterBool_operation(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitBool_operation" ):
                listener.exitBool_operation(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitBool_operation" ):
                return visitor.visitBool_operation(self)
            else:
                return visitor.visitChildren(self)



    def bool_operation(self, _p:int=0):
        _parentctx = self._ctx
        _parentState = self.state
        localctx = CLangParser.Bool_operationContext(self, self._ctx, _parentState)
        _prevctx = localctx
        _startState = 16
        self.enterRecursionRule(localctx, 16, self.RULE_bool_operation, _p)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 164
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [34]:
                self.state = 161
                self.match(CLangParser.FALSE)
                pass
            elif token in [33]:
                self.state = 162
                self.match(CLangParser.TRUE)
                pass
            elif token in [3, 41, 42, 43, 44]:
                self.state = 163
                self.bool_compare()
                pass
            else:
                raise NoViableAltException(self)

            self._ctx.stop = self._input.LT(-1)
            self.state = 177
            self._errHandler.sync(self)
            _alt = self._interp.adaptivePredict(self._input,11,self._ctx)
            while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                if _alt==1:
                    if self._parseListeners is not None:
                        self.triggerExitRuleEvent()
                    _prevctx = localctx
                    self.state = 175
                    self._errHandler.sync(self)
                    la_ = self._interp.adaptivePredict(self._input,10,self._ctx)
                    if la_ == 1:
                        localctx = CLangParser.Bool_operationContext(self, _parentctx, _parentState)
                        self.pushNewRecursionContext(localctx, _startState, self.RULE_bool_operation)
                        self.state = 166
                        if not self.precpred(self._ctx, 6):
                            from antlr4.error.Errors import FailedPredicateException
                            raise FailedPredicateException(self, "self.precpred(self._ctx, 6)")
                        self.state = 167
                        self.match(CLangParser.T__6)
                        self.state = 168
                        self.bool_operation(7)
                        pass

                    elif la_ == 2:
                        localctx = CLangParser.Bool_operationContext(self, _parentctx, _parentState)
                        self.pushNewRecursionContext(localctx, _startState, self.RULE_bool_operation)
                        self.state = 169
                        if not self.precpred(self._ctx, 5):
                            from antlr4.error.Errors import FailedPredicateException
                            raise FailedPredicateException(self, "self.precpred(self._ctx, 5)")
                        self.state = 170
                        self.match(CLangParser.T__7)
                        self.state = 171
                        self.bool_operation(6)
                        pass

                    elif la_ == 3:
                        localctx = CLangParser.Bool_operationContext(self, _parentctx, _parentState)
                        self.pushNewRecursionContext(localctx, _startState, self.RULE_bool_operation)
                        self.state = 172
                        if not self.precpred(self._ctx, 4):
                            from antlr4.error.Errors import FailedPredicateException
                            raise FailedPredicateException(self, "self.precpred(self._ctx, 4)")
                        self.state = 173
                        self.match(CLangParser.T__8)
                        self.state = 174
                        self.bool_operation(5)
                        pass

             
                self.state = 179
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,11,self._ctx)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.unrollRecursionContexts(_parentctx)
        return localctx


    class Bool_compareContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def var_expr(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(CLangParser.Var_exprContext)
            else:
                return self.getTypedRuleContext(CLangParser.Var_exprContext,i)


        def bool_compare(self):
            return self.getTypedRuleContext(CLangParser.Bool_compareContext,0)


        def getRuleIndex(self):
            return CLangParser.RULE_bool_compare

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterBool_compare" ):
                listener.enterBool_compare(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitBool_compare" ):
                listener.exitBool_compare(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitBool_compare" ):
                return visitor.visitBool_compare(self)
            else:
                return visitor.visitChildren(self)




    def bool_compare(self):

        localctx = CLangParser.Bool_compareContext(self, self._ctx, self.state)
        self.enterRule(localctx, 18, self.RULE_bool_compare)
        try:
            self.state = 208
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,12,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 180
                self.var_expr()
                self.state = 181
                self.match(CLangParser.T__9)
                self.state = 182
                self.var_expr()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 184
                self.var_expr()
                self.state = 185
                self.match(CLangParser.T__10)
                self.state = 186
                self.var_expr()
                pass

            elif la_ == 3:
                self.enterOuterAlt(localctx, 3)
                self.state = 188
                self.var_expr()
                self.state = 189
                self.match(CLangParser.T__11)
                self.state = 190
                self.var_expr()
                pass

            elif la_ == 4:
                self.enterOuterAlt(localctx, 4)
                self.state = 192
                self.var_expr()
                self.state = 193
                self.match(CLangParser.T__12)
                self.state = 194
                self.var_expr()
                pass

            elif la_ == 5:
                self.enterOuterAlt(localctx, 5)
                self.state = 196
                self.var_expr()
                self.state = 197
                self.match(CLangParser.T__13)
                self.state = 198
                self.var_expr()
                pass

            elif la_ == 6:
                self.enterOuterAlt(localctx, 6)
                self.state = 200
                self.var_expr()
                self.state = 201
                self.match(CLangParser.T__14)
                self.state = 202
                self.var_expr()
                pass

            elif la_ == 7:
                self.enterOuterAlt(localctx, 7)
                self.state = 204
                self.match(CLangParser.T__2)
                self.state = 205
                self.bool_compare()
                self.state = 206
                self.match(CLangParser.T__3)
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Var_exprContext(ParserRuleContext):
        __slots__ = 'parser'
